apps/headlamp/service.yaml
# Source: headlamp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: kube-system
  labels:
    helm.sh/chart: headlamp-0.41.0
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/version: "0.41.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP

  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/instance: headlamp
