apps/headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Development
    gethomepage.dev/name: Headlamp
    gethomepage.dev/href: "https://headlamp.home.alden.ai"
    gethomepage.dev/description: Kubernetes Dashboard
    gethomepage.dev/icon: headlamp-dark.svg
    gethomepage.dev/app: headlamp # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: >-
      app.kubernetes.io/name in (headlamp)
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - headlamp.home.alden.ai
  rules:
  - backendRefs:
    - name: headlamp
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
